# cxx-chessgui

./: .clang-tidy  CMakeLists.txt
assets/: assets.qrc
src/db/: Pext.hpp  bitboard.cxx  bitboard.hxx  game.cxx  game.hxx  move.hxx  movenode.hxx  types.hxx
src/gui/: boardview.cxx  boardview.hxx  main.cxx  mainwindow.cxx  mainwindow.hxx  mainwindow.ui  notationview.cxx  notationview.hxx
